[package]
name = "the_quest_for_more_power"
version = "0.1.0"
edition = "2024"

[dependencies]
avian2d = "0.3.1"
bevy = { version = "0.16.1", features = ["dynamic_linking", "wayland"] }
bevy_ecs_tiled = "0.7.3"
bevy_ecs_tilemap = "0.16.0"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
